themes/greatermedia/assets/css/ie9.css
.format-audio .entry2__thumbnail a, .format-gallery .entry2__thumbnail a, .format-video .entry2__thumbnail a, .type-contest .entry2__thumbnail a, .type-tribe_events .entry2__thumbnail a {
  font-size: 10%; }

.gallery__next--btn:after,
.gallery__prev--btn:before {
  font-size: 0.8rem;
  margin-top: 2px; }

.type-contest .entry2__thumbnail--end-date, .type-contest .entry2__thumbnail--contest-type {
  font-size: 1rem; }

/*# sourceMappingURL=ie9.css.map */

